--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -27,3 +27,8 @@ ru:
   app:
     name: 'Шашлыки'
     company: 'Хороший программист'
+    error:
+      one: 'В вашей форме %{count} ошибка'
+      few: 'В вашей форме %{count} ошибки'
+      many: 'В вашей форме %{count} ошибок'
+
