--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -31,4 +31,9 @@ ru:
       one: 'В вашей форме %{count} ошибка'
       few: 'В вашей форме %{count} ошибки'
       many: 'В вашей форме %{count} ошибок'
+    events:
+      show:
+        change: 'Изменить'
+        destroy: 'Удалить'
+        destroy_confirm_text: 'Вы действительно хотите удалить это мероприятие?'
 
